feat: Refactor security configuration to enhance readability and maintainability